--- a/res/layout/transmission_session_connections.xml
+++ b/res/layout/transmission_session_connections.xml
@@ -3,20 +3,20 @@
     style="@style/SessionCardContainer">
 
     <LinearLayout
-        android:id="@+id/transmission_session_general_expander"
+        android:id="@+id/transmission_session_connections_expander"
         style="@style/CardHeaderExpander" >
 
         <TextView
             style="@style/CardHeaderExpanderText"
-            android:text="@string/torrent_limits" />
+            android:text="@string/session_settings_connections" />
 
         <View
-            android:id="@+id/torrent_detail_limits_expander_image"
+            android:id="@+id/transmission_session_connections_expander_image"
             style="@style/CardHeaderExpanderImage" />
     </LinearLayout>
 
     <TableLayout
-        android:id="@+id/torrent_detail_limits_content"
+        android:id="@+id/transmission_session_connections_content"
         style="@style/CardContent" >
         
         <TableRow
@@ -25,21 +25,45 @@
             
 	        <TextView
 	            style="@style/CardHeading"
-	            android:text="@string/torrent_bandwidth"
+	            android:text="@string/session_settings_connections"
 	            android:layout_span="2" />
         </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <CheckBox
-                android:id="@+id/torrent_global_limits"
-                android:layout_span="2"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+    		android:focusableInTouchMode="true"
+    		android:descendantFocusability="beforeDescendants"
+    		android:gravity="center_vertical" >
+            
+            <TextView style="@style/CardTextColumn"
+                 android:text="@string/session_settings_peer_port" />
+            
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/torrent_global_limits" />
+                android:layout_margin="4dp"
+                android:orientation="horizontal">
 
+	            <EditText
+	                android:id="@+id/transmission_session_peer_port"
+	                android:inputType="number"
+	                android:layout_width="0dp"
+	                android:layout_weight="2"
+	                style="@style/CardEntry" >
+	            </EditText>
+	            
+	            <Button
+                    style="@style/CardButton"
+	                android:id="@+id/transmission_session_port_test"
+	                android:layout_width="0dp"
+	                android:layout_weight="1"
+	                android:ellipsize="end"
+                    android:text="@string/session_settings_port_test"/>
+                
+            </LinearLayout>
+            
         </TableRow>
 
         <TableRow
@@ -48,31 +72,13 @@
             
             <TextView
                  style="@style/CardTextColumn"
-                 android:text="@string/torrent_priority" />
+                 android:text="@string/session_settings_encryption" />
 
             <Spinner
-                android:id="@+id/torrent_priority"
+                android:id="@+id/transmission_session_encryption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:entries="@array/torrent_priority" />
-            
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-    		android:focusableInTouchMode="true"
-    		android:descendantFocusability="beforeDescendants" >
-            
-            <TextView style="@style/CardTextColumn"
-                 android:text="@string/torrent_queue_position" />
-
-            <EditText
-                android:id="@+id/torrent_queue_position"
-                android:inputType="number"
-                style="@style/CardEntry" >
-            </EditText>
+                android:entries="@array/session_settings_encryption" />
             
         </TableRow>
 
@@ -81,30 +87,12 @@
             android:layout_height="wrap_content" >
 
             <CheckBox
-                android:id="@+id/torrent_limit_download_check"
+                android:id="@+id/transmission_session_random_port"
                 android:layout_span="2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/torrent_limit_download" />
+                android:text="@string/session_settings_random_port" />
 
-        </TableRow>
-        
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-    		android:focusableInTouchMode="true"
-    		android:descendantFocusability="beforeDescendants" >
-            
-            <TextView style="@style/CardTextColumn"
-                android:text="@string/torrent_limit_speed_amount" />
-            
-            <EditText
-                android:id="@+id/torrent_limit_download"
-                android:inputType="number"
-                style="@style/CardEntry" >
-            </EditText>
-            
         </TableRow>
         
         <TableRow
@@ -112,30 +100,12 @@
             android:layout_height="wrap_content" >
 
             <CheckBox
-                android:id="@+id/torrent_limit_upload_check"
+                android:id="@+id/transmission_session_port_forwarding"
                 android:layout_span="2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/torrent_limit_upload" />
+                android:text="@string/session_settings_port_forwarding" />
 
-        </TableRow>
-        
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-    		android:focusableInTouchMode="true"
-    		android:descendantFocusability="beforeDescendants" >
-            
-            <TextView style="@style/CardTextColumn"
-                android:text="@string/torrent_limit_speed_amount" />
-            
-            <EditText
-                android:id="@+id/torrent_limit_upload"
-                android:inputType="number"
-                style="@style/CardEntry" >
-            </EditText>
-            
         </TableRow>
         
         <TableRow
@@ -144,72 +114,99 @@
             
 	        <TextView
 	            style="@style/CardHeading"
-	            android:text="@string/torrent_seeding"
+	            android:text="@string/session_settings_protocol"
 	            android:layout_span="2" />
 	        
 	    </TableRow>
-
+                
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
-            
-            <TextView style="@style/CardTextColumn" android:text="@string/torrent_seed_ratio_mode" />
 
-            <Spinner
-                android:id="@+id/torrent_seed_ratio_mode"
+            <CheckBox
+                android:id="@+id/transmission_session_peer_exchange"
+                android:layout_span="2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:entries="@array/torrent_seed_ratio_mode" />
-            
-        </TableRow>
+                android:text="@string/session_settings_peer_exchange" />
 
+        </TableRow>
+                        
         <TableRow
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-    		android:focusableInTouchMode="true"
-    		android:descendantFocusability="beforeDescendants" >
-            
-            <TextView style="@style/CardTextColumn" android:text="@string/torrent_seed_ratio_limit" />
+            android:layout_height="wrap_content" >
 
-            <EditText
-                android:id="@+id/torrent_seed_ratio_limit"
-                android:inputType="numberDecimal"
-                style="@style/CardEntry" >
-            </EditText>
-            
+            <CheckBox
+                android:id="@+id/transmission_session_hash_table"
+                android:layout_span="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/session_settings_distributed_hash_table" />
+
         </TableRow>
-                   
+                                
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <CheckBox
+                android:id="@+id/transmission_session_local_discovery"
+                android:layout_span="2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/session_settings_local_discovery" />
+
+        </TableRow>
+                
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
             
-	                
 	        <TextView
 	            style="@style/CardHeading"
-	            android:text="@string/torrent_peers"
+	            android:text="@string/session_settings_blocklist"
 	            android:layout_span="2" />
-       	</TableRow>
-
+	        
+	    </TableRow>
+	            
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+               
+            <CheckBox
+                android:id="@+id/transmission_session_blocklist_check"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="@string/session_settings_blocklist_enable_format" />	            
+            	            
+            <Button
+                style="@style/CardButton"
+                android:id="@+id/transmission_session_blocklist_update"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:text="@string/session_settings_blocklist_update"/>
+            
+        </TableRow>
+        
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="true"
     		android:focusableInTouchMode="true"
     		android:descendantFocusability="beforeDescendants" >
-
             
             <TextView style="@style/CardTextColumn"
-                android:text="@string/torrent_peer_limit" />
-
+                android:text="@string/session_settings_blocklist_url" />
+            
             <EditText
-                android:id="@+id/torrent_peer_limit"
-                android:inputType="number"
+                android:id="@+id/transmission_session_blocklist_url"
+                android:inputType="textNoSuggestions|textVisiblePassword"
                 style="@style/CardEntry" >
             </EditText>
-                
-
+            
         </TableRow>
-        
+
     </TableLayout>
 </LinearLayout>
