--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -126,6 +126,15 @@
         <item name="android:padding">4dp</item>
         <item name="android:selectAllOnFocus">true</item>
     </style>
+
+    <style name="CardButton">
+        <item name="android:lines">1</item>
+        <item name="android:minHeight">32dp</item>
+        <item name="android:scrollHorizontally">true</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
     
     <style name="CardTextColumn">
         <item name="android:layout_width">wrap_content</item>
