rename the transmission data loader
extract the error layer to a separate layout file

update two of the 4 session settings panels

--- a/res/layout/fragment_torrent_detail_page.xml
+++ b/res/layout/fragment_torrent_detail_page.xml
@@ -17,11 +17,11 @@
             style="@style/TorrentTitle" />
 
         <include layout="@layout/torrent_detail_overview" />
-		
-		<include layout="@layout/torrent_detail_files" />
-        
+
+        <include layout="@layout/torrent_detail_files" />
+
         <include layout="@layout/torrent_detail_limits" />
 
     </LinearLayout>
 
-</ScrollView><!-- android:background="@android:drawable/dialog_holo_light_frame" -->
+</ScrollView>
