--- a/res/layout-sw600dp-w720dp/activity_transmission_session.xml
+++ b/res/layout-sw600dp-w720dp/activity_transmission_session.xml
@@ -1,42 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/session_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <LinearLayout
-        android:id="@+id/torrent_detail_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:descendantFocusability="beforeDescendants"
-        android:focusableInTouchMode="true"
-        android:padding="8dp"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp" >
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:id="@+id/torrent_detail_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:descendantFocusability="beforeDescendants"
+            android:focusableInTouchMode="true"
+            android:padding="8dp"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp" >
 
-            <include layout="@layout/transmission_session_general" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <include layout="@layout/transmission_session_bandwidth" />
+                <include layout="@layout/transmission_session_general" />
+
+                <include layout="@layout/transmission_session_bandwidth" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <include layout="@layout/transmission_session_connections" />
+
+                <include layout="@layout/transmission_session_limits" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-
-            <include layout="@layout/transmission_session_connections" />
-
-            <include layout="@layout/transmission_session_limits" />
-
-        </LinearLayout>
+        <include layout="@layout/error_layer" />
 
     </LinearLayout>
 
