--- a/res/layout/activity_transmission_session.xml
+++ b/res/layout/activity_transmission_session.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/session_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -20,6 +21,8 @@
         <include layout="@layout/transmission_session_bandwidth" />
 
         <include layout="@layout/transmission_session_limits" />
+
+        <include layout="@layout/error_layer" />
 
     </LinearLayout>
 </ScrollView>
