--- a/res/layout/transmission_session_bandwidth.xml
+++ b/res/layout/transmission_session_bandwidth.xml
@@ -137,7 +137,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center">
+                android:gravity="center_vertical">
                 
             <Button
                 style="@style/CardButton"
