add functionality to the last 2 panels

--- a/res/layout-sw600dp-w720dp/activity_transmission_session.xml
+++ b/res/layout-sw600dp-w720dp/activity_transmission_session.xml
@@ -16,6 +16,7 @@
             android:orientation="horizontal"
             android:descendantFocusability="beforeDescendants"
             android:focusableInTouchMode="true"
+            android:baselineAligned="false"
             android:padding="8dp"
             android:paddingBottom="16dp"
             android:paddingTop="16dp" >
