hide the alt speed button if there is no session
allow the loader to return no session if there is an error

save the expanded states correctly in the sessiono settings

--- a/res/menu/torrent_list_options.xml
+++ b/res/menu/torrent_list_options.xml
@@ -12,7 +12,7 @@
     
     <item android:id="@+id/menu_alt_speed"
         android:icon="@drawable/ic_menu_alt_speed_off"
-        android:visible="true"
+        android:visible="false"
         android:showAsAction="ifRoom"
         android:menuCategory="system"
         android:orderInCategory="25"
