handle the various errors when processing session-set requests

--- a/res/layout-sw600dp-w720dp/activity_transmission_session.xml
+++ b/res/layout-sw600dp-w720dp/activity_transmission_session.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/session_scroll"
+<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <LinearLayout
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/session_scroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent" >
 
         <LinearLayout
             android:id="@+id/transmission_session_container"
@@ -47,8 +46,8 @@
 
         </LinearLayout>
 
-        <include layout="@layout/error_layer" />
+    </ScrollView>
 
-    </LinearLayout>
+    <include layout="@layout/error_layer" />
 
-</ScrollView>
+</FrameLayout>
