--- a/res/layout/torrent_list_twopane.xml
+++ b/res/layout/torrent_list_twopane.xml
@@ -42,7 +42,15 @@
             android:id="@+id/torrent_detail_container"
             android:layout_marginLeft="15dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" >
+
+            <View
+                android:id="@+id/torrent_detail_placeholder_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/detail_background" />
+
+        </FrameLayout>
 
     </RelativeLayout>
 
