--- a/res/anim/weight_animator.xml
+++ b/res/anim/weight_animator.xml
@@ -4,5 +4,4 @@
     android:interpolator="@android:anim/accelerate_interpolator"
     android:valueFrom="0.0"
     android:valueTo="2.0"
-    android:duration="250"
-    android:startOffset="150" />
+    android:duration="250" />
