show when a torrent is paused

--- a/res/layout/fragment_torrent_detail_page.xml
+++ b/res/layout/fragment_torrent_detail_page.xml
@@ -14,6 +14,7 @@
         <TextView
             android:id="@+id/torrent_detail_title"
             android:fontFamily="sans-serif-condensed"
+            android:textIsSelectable="true"
             style="@style/TorrentTitle" />
 
         <include layout="@layout/torrent_detail_overview" />
