--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -1,54 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="16dip"
-    android:paddingEnd="16dip"
-	android:paddingTop="8dp"
-	android:paddingBottom="8dp"
-	android:paddingLeft="16dp"
-	android:paddingRight="16dp"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-    android:background="@drawable/list_activated_holo_light"
-    android:gravity="center_vertical"
-    android:orientation="vertical" >
-    
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed"
-        android:textColor="@drawable/list_item_color"
-        android:textAppearance="?android:attr/textAppearanceListItem"
-        android:textSize="@dimen/torrent_list_name_text_size"
-        android:textStyle="bold" />
-    
-    <TextView
-        android:id="@+id/traffic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@drawable/list_item_color"
-        android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        android:textSize="@dimen/torrent_list_traffic_text_size" />
+    android:visibility="gone" >
 
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:attr/progressBarStyleHorizontal"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminate="false"
-        android:progressDrawable="@drawable/torrent_progress_bar"
-        android:max="100"
-        android:progress="0" />
-            
-    <TextView
-        android:id="@+id/status"
+        android:paddingStart="16dip"
+        android:paddingEnd="16dip"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+        android:background="@drawable/list_activated_holo_light"
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@drawable/list_item_color"
+            android:textAppearance="?android:attr/textAppearanceListItem"
+            android:textSize="@dimen/torrent_list_name_text_size"
+            android:textStyle="bold" />
+        
+        <TextView
+            android:id="@+id/traffic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@drawable/list_item_color"
+            android:textAppearance="?android:attr/textAppearanceListItemSmall"
+            android:textSize="@dimen/torrent_list_traffic_text_size" />
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/torrent_progress_bar"
+            android:max="100"
+            android:progress="0" />
+                
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@drawable/list_item_color"
+            android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
+            android:textSize="@dimen/torrent_list_status_text_size" />
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/error_indicator"
         android:layout_width="wrap_content"
-     	android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@drawable/list_item_color"
-        android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
-        android:textSize="@dimen/torrent_list_status_text_size" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/torrent_error"
+        android:scaleType="center"
+        android:src="@drawable/ic_error_indicator"
+        android:visibility="visible" />
 
-</LinearLayout>
+</RelativeLayout>
