--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:visibility="gone" >
+    android:background="@drawable/list_activated_holo_light"
+    android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:paddingStart="16dip"
         android:paddingEnd="16dip"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingRight="0dp"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"
-        android:background="@drawable/list_activated_holo_light"
         android:gravity="center_vertical"
         android:orientation="vertical" >
 
@@ -58,15 +59,11 @@
 
     </LinearLayout>
 
-    <ImageView
+    <View
         android:id="@+id/error_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@string/torrent_error"
-        android:scaleType="center"
-        android:src="@drawable/ic_error_indicator"
-        android:visibility="visible" />
+        android:layout_width="4dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="12dp"
+        android:background="#cc0000" />
 
-</RelativeLayout>
+</LinearLayout>
