--- a/res/values-sw600dp/dimens.xml
+++ b/res/values-sw600dp/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="torrent_list_name_text_size">18sp</dimen>
     <dimen name="torrent_list_traffic_text_size">12sp</dimen>
     <dimen name="torrent_list_status_text_size">14sp</dimen>
+    <dimen name="torrent_list_error_text_size">12sp</dimen>
 </resources>
