--- a/res/values-xhdpi/dimens.xml
+++ b/res/values-xhdpi/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="torrent_list_name_text_size">17sp</dimen>
     <dimen name="torrent_list_traffic_text_size">11sp</dimen>
     <dimen name="torrent_list_status_text_size">13sp</dimen>
+    <dimen name="torrent_list_error_text_size">11sp</dimen>
 </resources>
