and change the error text color in the detail panel as well

--- a/res/layout/torrent_detail_overview.xml
+++ b/res/layout/torrent_detail_overview.xml
@@ -101,7 +101,8 @@
 
             <TextView style="@style/CardTextColumn" android:text="@string/torrent_error" />
 
-            <TextView android:id="@+id/torrent_error" />
+            <TextView android:id="@+id/torrent_error"
+                    android:textColor="@drawable/list_item_error_color"/>
         </TableRow>                                                                                                    
         
         <TableRow
