--- a/res/menu/add_directory_option.xml
+++ b/res/menu/add_directory_option.xml
@@ -5,4 +5,9 @@
         android:showAsAction="always"
         android:title="@string/add_directory_option" />
 
+
+    <item android:id="@+id/import_directories"
+          android:visible="false"
+          android:showAsAction="never"
+          android:title="@string/import_session_directories" />
 </menu>
