Trackers card in the detail fragment

--- a/res/layout/fragment_torrent_detail_page.xml
+++ b/res/layout/fragment_torrent_detail_page.xml
@@ -22,6 +22,8 @@
 
         <include layout="@layout/torrent_detail_limits" />
 
+        <include layout="@layout/torrent_detail_trackers" />
+
     </LinearLayout>
 
 </ScrollView>
