--- a/res/layout/torrent_detail_trackers_row.xml
+++ b/res/layout/torrent_detail_trackers_row.xml
@@ -3,6 +3,9 @@
     android:id="@+id/torrent_detail_trackers_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:background="@drawable/list_activated_holo_light"
     android:stretchColumns="0"
     android:shrinkColumns="0">
 
